--- a/apps/platform/src/app/i18n/en/user.json
+++ b/apps/platform/src/app/i18n/en/user.json
@@ -1,4 +1,6 @@
 {
+  "SUCCESSFULLY_LOGGED_IN": "You have successfully logged in.",
+  "SUCCESSFULLY_APPROVED_EMAIL": "Email has been successfully verified.",
   "USER_NOT_ACTIVE": "Sorry, seems like you account is deactivated. Please contact support if you think that something is wrong.",
   "FINISHED_REGISTRATION": "Thank you for registration. If user with such email doesn't exists in our database. You will receive an email, with a further procedure for sign up."
 }
